--- a/assets/about.html
+++ b/assets/about.html
@@ -4,187 +4,170 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>About-Us</title>
     <link rel="stylesheet" href="./styles.css">
 </head>
 
 <body>
-    <section id="hero">
 
-        <nav>
 
-            <div class="nav-container">
+    <nav>
 
-                <div class="nav-row">
+        <div class="nav-container">
 
-                    <img class="logo" src="./consult-logo-1-croped.png" alt="">
+            <div class="nav-row">
 
-                    <ul class="nav-links">
+                <img class="logo" src="./consult-logo-1-croped.png" alt="">
 
-                        <a class="nav-link" href="./index.html">Home</a>
-                        <a class="nav-link" href="./Training.html">Training</a>
-                        <a class="nav-link" href="./consulting.html">Consulting</a>
+                <ul class="nav-links">
 
-                    </ul>
+                    <a class="nav-link" href="./index.html">Home</a>
+                    <a class="nav-link" href="./Training.html">Training</a>
+                    <a class="nav-link" href="./consulting.html">Consulting</a>
 
-                    <div class="nav-btn_area">
-                        
-                        <a class="nav-link" href="./about.html">About Us</a>
-                        <a class="nav-link" href="./contact.html">Contact Us</a>
-                        <!-- <button class="nav-btn">Get Started</button> -->
+                </ul>
 
-                    </div>
+                <div class="nav-btn_area">
+
+                    <a class="nav-link" href="./about.html">About Us</a>
+                    <a class="nav-link" href="./contact.html">Contact Us</a>
+                    <!-- <button class="nav-btn">Get Started</button> -->
 
                 </div>
 
             </div>
 
-        </nav>
+        </div>
 
-        <header>
+    </nav>
+
+    <header>
 
 
 
-            <div class="header-container">
+        <div class="header-container">
 
-                <div class="header-row">
+            <div class="header-row">
 
-                    <div class="header-text_area">
+                <div class="header-text_area">
 
-                        <h1 class="header-text">
-                            Bridging the Gap Between Business and IT
-                        </h1>
+                    <h1 class="header-text">
+                        Training And Business Solution Expert.
+                    </h1>
 
-                        <p class="header-para">Lorem ipsum dolor sit met consectetur adipisicing elit. Unde maiores
+                    <!-- <p class="header-para">Lorem ipsum dolor sit met consectetur adipisicing elit. Unde maiores
                             deserunt molestias minima. Optio, nihil numquam repellendus cum quibusdam nulla, nostrum
-                        </p>
+                        </p> -->
 
-                        <!-- <button class="header-btn">Explore</button> -->
+                    <!-- <button class="header-btn">Explore</button> -->
 
+                </div>
+
+                <div class="header-img_area">
+
+                    <div class="header-card_area-one">
+                        <div class="img-card_one"></div>
+                        <div class="img-card_two"></div>
                     </div>
 
-                    <div class="header-img_area">
-
-                        <div class="header-card_area-one">
-                            <div class="img-card_one"></div>
-                            <div class="img-card_two"></div>
-                        </div>
-
-                        <div class="header-card_area-one">
-                            <div class="img-card_three"></div>
-                            <div class="img-card_four"></div>
-                        </div>
-
+                    <div class="header-card_area-one">
+                        <div class="img-card_three"></div>
+                        <div class="img-card_four"></div>
                     </div>
 
                 </div>
 
             </div>
 
-        </header>
+        </div>
 
-    </section>
+    </header>
+
+
 
     <main>
-        <section id="highlight">
-            <section id="about-first_sec">
+        <!-- <section id="highlight"> -->
+        <section id="about-first_sec">
 
-                <div class="about-first_secCon">
+            <div class="about-first_secCon">
 
-                    <div class="about-first_secRow">
+                <div class="about-first_secRow">
 
-                        <div class="about-first_secParent">
+                    <div class="about-first_secParent">
 
-                            <h2 class="about-first_secHead">
-                                We are a team of data and analytical experts.
-                            </h2>
+                        <h2 class="about-first_secHead">
+                            BestBridge Training and Consulting is an esteemed executive development and business
+                            solution firm.We step in, setting gold standard for cultivating Personal and Professional
+                            Development and
+                            driving business solutions.
+                        </h2>
 
-                            <h2 class="about-first_secHeadTwo">
-                                Together, we bring you experience from all sectors of business. Let our passion for data
-                                and
-                                analylitic guide you to excel in business.
-                            </h2>
-
-                        </div>
-
-                    </div>
-
-                </div>
-
-            </section>
-
-            <section id="why_sec">
-
-                <div class="why-container">
-
-                    <div class="why-row">
-
-                        <div class="why-parent">
-
-                            <h2 class="whyHead">Why BestBridge?</h2>
-
-                            <div class="why-child">
-
-                                <p class="whyParaHead">Mentoring</p>
-
-                                <p class="whyPara">BestBridge Consulting utilizes a business approach simplify data
-                                    analytics. In
-                                    our experience as data enthusiasts, we grew tired of countless searches that led to
-                                    further confusion. We wanted a way to solve our analytical needs quickly and
-                                    efficiently
-                                    without needing to watch hours of video instruction. Most forums or examples we
-                                    found
-                                    online were not relevant to our data and when needing help with a formula or query
-                                    we
-                                    found that key steps were always left out. Our Mentoring services provide data
-                                    analytical solutions with an easy-to-understand explanation.</p>
-
-                            </div>
-
-                            <div class="why-child child-color">
-
-                                <p class="whyParaHead borderTwo">Consulting</p>
-
-                                <p class="whyPara">BestBridge Consulting leads with compassion and a business sense, our
-                                    goal is to
-                                    maximize the value to your business. Businesses do not have the time to build
-                                    procedures
-                                    or documentation, all while incorporating a professional and simple design. UI
-                                    Consulting promises to enhance and build an intelligent design to your business
-                                    systems
-                                    and procedures that well document and analyze your business. Proper documentation
-                                    will
-                                    achieve better refinement of poor processes and catered analytics for business
-                                    improvement.
-                                <p>
-
-                            </div>
-
-                            <div class="why-child">
-
-                                <p class="whyParaHead">The Team</p>
-
-                                <p class="whyPara">A growing team of data enthusiasts that share a strong passion for
-                                    data
-                                    analytics. Experience in Digital Media, Finance, Sales, Operations, Engineering,
-                                    Service, Procurement, Information Technology, and Administration. We are unique, in
-                                    that
-                                    we bring elements from all sectors of business into our thought process and
-                                    analytics
-                                    providing a 365 view. Fluent in both English and Spanish, we offer consulting in
-                                    both
-                                    languages to help you.</p>
-
-                            </div>
-
-                        </div>
+                        <!-- <h2 class="about-first_secHeadTwo">
+                            
+                        </h2> -->
 
                     </div>
 
                 </div>
 
-            </section>
+            </div>
+
         </section>
+
+        <section id="why_sec">
+
+            <div class="why-container">
+
+                <div class="why-row">
+
+                    <div class="why-parent">
+
+                        <!-- <h2 class="whyHead">Why BestBridge?</h2> -->
+
+                        <div class="why-child">
+
+                            <p class="whyParaHead">Our Vision</p>
+
+                            <p class="whyPara">To be a leading executive educational and business solutions organization
+                                in Africa.</p>
+
+                        </div>
+
+                        <div class="why-child child-color">
+
+                            <p class="whyParaHead borderTwo">Our Mission</p>
+
+                            <p class="whyPara">
+                                We exist to provide knowledge and skills through high-quality accessible and affordable
+                                training and business solutions.
+                            <p>
+
+                        </div>
+
+                        <div class="why-child">
+
+                            <p class="whyParaHead">Core Values</p>
+
+                            <p class="whyPara">
+                            <ul class="core">
+                                <li class="li-core">Respect</li>
+                                <li class="li-core">Integrity</li>
+                                <li class="li-core">Service</li>
+                                <li class="li-core">Knowledge</li>
+                                <li class="li-core">Excellence</li>
+                            </ul>
+                            </p>
+
+                        </div>
+
+                    </div>
+
+                </div>
+
+            </div>
+
+        </section>
+        <!-- </section> -->
     </main>
 
 
@@ -224,10 +207,10 @@
                     <h1 class="footer-logo">StartUp</h1>
 
                     <ul class="nav-links">
-                        <a class="nav-link" href="">About Us</a>
-                        <a class="nav-link" href="">Services</a>
-                        <a class="nav-link" href="">Our Team</a>
-                        <a class="nav-link" href="">Contact Us</a>
+                        <a class="nav-link foot-link" href="">About Us</a>
+                        <a class="nav-link foot-link" href="">Training</a>
+                        <a class="nav-link foot-link" href="">Consulting</a>
+                        <a class="nav-link foot-link" href="">Contact Us</a>
                     </ul>
 
                     <small class="copy">Copyright &copy2023-bestbridge</small>
