--- a/assets/contact.html
+++ b/assets/contact.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <section id="hero">
+    
 
         <nav>
 
@@ -53,9 +53,9 @@
                             Contact Us
                         </h1>
 
-                        <p class="header-para">Lorem ipsum dolor sit met consectetur adipisicing elit. Unde maiores
+                        <!-- <p class="header-para">Lorem ipsum dolor sit met consectetur adipisicing elit. Unde maiores
                             deserunt molestias minima. Optio, nihil numquam repellendus cum quibusdam nulla, nostrum
-                        </p>
+                        </p> -->
 
                         <!-- <button class="header-btn">Explore</button> -->
 
@@ -81,10 +81,10 @@
 
         </header>
 
-    </section>
+    
 
     <main>
-<section id="highlight">
+<!-- <section id="highlight"> -->
 
 
         <section id="conPage-sec_area">
@@ -171,13 +171,13 @@
                 <div class="address-box">
                     <i class="fa-regular fa-address-book add-icon"></i>
                     <h3 class="add-head">ADDRESS</h3>
-                    <p class="add-para">27 13 Lowe Haven</p>
+                    <p class="add-para add-width">Kasoa Adade Near Goil Filling Station</p>
                 </div>
 
                 <div class="address-box">
                     <i class="fa-solid fa-phone-volume add-icon"></i>
                     <h3 class="add-head">PHONE</h3>
-                    <p class="add-para">+111 343 4334</p>
+                    <p class="add-para">+233 50-085-9292</p>
                 </div>
 
                 <div class="address-box">
@@ -190,7 +190,7 @@
 
         </section>
 
-    </section>
+    <!-- </section> -->
     </main>
 
     <footer>
@@ -229,10 +229,10 @@
                     <h1 class="footer-logo">StartUp</h1>
 
                     <ul class="nav-links">
-                        <a class="nav-link" href="">About Us</a>
-                        <a class="nav-link" href="">Services</a>
-                        <a class="nav-link" href="">Our Team</a>
-                        <a class="nav-link" href="">Contact Us</a>
+                        <a class="nav-link foot-link" href="">About Us</a>
+                        <a class="nav-link foot-link" href="">Services</a>
+                        <a class="nav-link foot-link" href="">Our Team</a>
+                        <a class="nav-link foot-link" href="">Contact Us</a>
                     </ul>
 
                     <small class="copy">Copyright &copy2023-bestbridge</small>
