--- a/assets/request.html
+++ b/assets/request.html
@@ -5,13 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Request Form</title>
     <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./media.css">
 </head>
 <body>
+
     <section id="forms">
 
         <div class="forms-row re-height">
 
-            <form action="https://formspree.io/f/mrgwrlyr" method="POST">
+            <form class="mid-w" action="https://formspree.io/f/xdorjbpb"  method="POST">
                 <fieldset>
                     <label for="">Name*</label>
                     <input type="text" placeholder="Full Name" name="fname" required>
