--- a/assets/Training.html
+++ b/assets/Training.html
@@ -4,8 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Training</title>
     <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./media.css">
+    <script src="./consulting.js" defer></script>
+    <!-- icon  -->
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v2.1.6/css/unicons.css">
 </head>
 
 <body>
@@ -23,18 +27,14 @@
                 <ul class="nav-links">
 
                     <a class="nav-link" href="./index.html">Home</a>
-                    <a class="nav-link" href="./service.html">Training</a>
+                    <a class="nav-link" href="./Training.html">Training</a>
                     <a class="nav-link" href="./consulting.html">Consulting</a>
-
-                </ul>
-
-                <div class="nav-btn_area">
-
                     <a class="nav-link" href="./about.html">About Us</a>
                     <a class="nav-link" href="./contact.html">Contact Us</a>
-                    <!-- <button class="nav-btn">Get Started</button> -->
+                </ul>
 
-                </div>
+                <button id="open-menu-btn" class="nav-menu"><i class="uil uil-bars"></i></button>
+                <button id="close-menu-btn" class="nav-menu"><i class="uil uil-multiply"></i></button>
 
             </div>
 
@@ -42,7 +42,7 @@
 
     </nav>
 
-    <header>
+    <header class="train">
 
         <div class="header-container">
 
@@ -50,9 +50,9 @@
 
                 <div class="header-text_area">
 
-                    <h1 class="header-text">
+                    <!-- <h1 class="header-text">
                         Training
-                    </h1>
+                    </h1> -->
 
                     <p class="header-para">Gold standard training that enhances your personal and professional development.
                     </p>
@@ -105,7 +105,7 @@
                         <div class="program-child_Card">
 
                             <figure class="pro-fig">
-                                <img class="pro-img" src="./assets/images-pro1.jpg" alt="">
+                                <img class="pro-img" src="./leader-IMG.jpg" alt="">
                             </figure>
 
                             <div class="pro-textArea">
@@ -121,7 +121,7 @@
                         <div class="program-child_Card">
 
                             <figure class="pro-fig">
-                                <img class="pro-img" src="./assets/image-pro3.png" alt="">
+                                <img class="pro-img" src="./personal-dev.webp" alt="">
                             </figure>
 
                             <div class="pro-textArea">
@@ -137,7 +137,7 @@
                         <div class="program-child_Card">
 
                             <figure class="pro-fig">
-                                <img class="pro-img" src="./assets/43-1024x683.webp" alt="">
+                                <img class="pro-img" src="./pro-dev.jpg" alt="">
                             </figure>
 
                             <div class="pro-textArea">
@@ -153,7 +153,7 @@
                         <div class="program-child_Card">
 
                             <figure class="pro-fig">
-                                <img class="pro-img" src="./assets/image-pro4.webp" alt="">
+                                <img class="pro-img" src="./EN-IMG.jpg" alt="">
                             </figure>
 
                             <div class="pro-textArea">
@@ -195,8 +195,8 @@
                         <p class="foot-para">Feel free to get in touch with us via email or phone</p>
 
                         <div class="foot-mailPhone">
-                            <small class="foot-mail">info@bestbridge.com</small>
-                            <small class="foot-phone">+233 030008100</small>
+                            <small class="foot-mail">info.bestbridgetc@gmail.com</small>
+                            <small class="foot-phone">+233 50-085-9292</small>
                         </div>
 
                     </div>
