--- a/assets/about.html
+++ b/assets/about.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About-Us</title>
     <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./media.css">
+    <script src="./consulting.js" defer></script>
+    <!-- icon  -->
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v2.1.6/css/unicons.css">
 </head>
 
 <body>
@@ -24,16 +28,12 @@
                     <a class="nav-link" href="./index.html">Home</a>
                     <a class="nav-link" href="./Training.html">Training</a>
                     <a class="nav-link" href="./consulting.html">Consulting</a>
-
-                </ul>
-
-                <div class="nav-btn_area">
-
                     <a class="nav-link" href="./about.html">About Us</a>
                     <a class="nav-link" href="./contact.html">Contact Us</a>
-                    <!-- <button class="nav-btn">Get Started</button> -->
+                </ul>
 
-                </div>
+                <button id="open-menu-btn" class="nav-menu"><i class="uil uil-bars"></i></button>
+                <button id="close-menu-btn" class="nav-menu"><i class="uil uil-multiply"></i></button>
 
             </div>
 
@@ -41,7 +41,7 @@
 
     </nav>
 
-    <header>
+    <header class="about-hero">
 
 
 
@@ -186,8 +186,8 @@
                         <p class="foot-para">Feel free to get in touch with us via email or phone</p>
 
                         <div class="foot-mailPhone">
-                            <small class="foot-mail">info@bestbridge.com</small>
-                            <small class="foot-phone">+233 030008100</small>
+                            <small class="foot-mail">info.bestbridgetc@gmail.com</small>
+                            <small class="foot-phone">+233 50-085-9292</small>
                         </div>
 
                     </div>
