--- a/assets/index.html
+++ b/assets/index.html
@@ -53,7 +53,7 @@
 
                 <div class="header-text_area">
 
-                
+
 
                 </div>
 
@@ -125,37 +125,37 @@
                             <h2 class="bus-head">Our unique approach.</h2>
 
                             <!-- <div class="dropdown"> -->
-                                <!-- <button class="bus-btn bus-drop_para dropbtn" onclick="myFunction()" aria-hidden="true"> -->
-                                    <!-- <i class="fa fa-chevron-circle-down dropbtn" aria-hidden="true"
+                            <!-- <button class="bus-btn bus-drop_para dropbtn" onclick="myFunction()" aria-hidden="true"> -->
+                            <!-- <i class="fa fa-chevron-circle-down dropbtn" aria-hidden="true"
                                         ></i> -->
-                                    <!-- Explore -->
-                                <!-- </button> -->
-                                <!-- id="myDropdown" -->
-                                <div  class="dropdown">
+                            <!-- Explore -->
+                            <!-- </button> -->
+                            <!-- id="myDropdown" -->
+                            <div class="dropdown">
 
-                                    <h3 class="dropH">Business Solutions</h3>
-                                    <p class="dropP">We take time to understand the unique challenges and opportunities
-                                        facing
-                                        businesses and develop solutions that are fit for the organizations specific
-                                        needs. We find out what is holding your business back from being more
-                                        profitable. We ensure solutions address current and future challenges.
-                                    </p>
+                                <h3 class="dropH">Business Solutions</h3>
+                                <p class="dropP">We take time to understand the unique challenges and opportunities
+                                    facing
+                                    businesses and develop solutions that are fit for the organizations specific
+                                    needs. We find out what is holding your business back from being more
+                                    profitable. We ensure solutions address current and future challenges.
+                                </p>
 
-                                    <h3 class="dropH">Executive Education</h3>
-                                    <p class="dropP">
-                                        Bestbridge adopts a combination of delivery methods to embrace the dynamic
-                                        nature of adult learning. We combine traditional classroom setting with cutting
-                                        edge digital platforms, ensuring participants receive a holistic and engaging
-                                        training experience.
-                                    </p>
+                                <h3 class="dropH">Executive Education</h3>
+                                <p class="dropP">
+                                    Bestbridge adopts a combination of delivery methods to embrace the dynamic
+                                    nature of adult learning. We combine traditional classroom setting with cutting
+                                    edge digital platforms, ensuring participants receive a holistic and engaging
+                                    training experience.
+                                </p>
 
-                                    <h3 class="dropH">Feedback</h3>
-                                    <p class="dropP dropPadding">We ask you to evaluate us, did the solution meet your
-                                        expectations? did it
-                                        solve a specific problem or problems?
-                                    </p>
+                                <h3 class="dropH">Feedback</h3>
+                                <p class="dropP dropPadding">We ask you to evaluate us, did the solution meet your
+                                    expectations? did it
+                                    solve a specific problem or problems?
+                                </p>
 
-                                </div>
+                            </div>
                             <!-- </div> -->
 
                             <!-- <div class="dropdown">
@@ -235,24 +235,23 @@
 
                         <div class="test-child">
 
-                            <figure class="test-fig">
+                            <!-- <figure class="test-fig">
                                 <img class="test-img" src="./image-3.png" alt="">
-                            </figure>
+                            </figure> -->
 
                             <div class="test-textArea">
 
                                 <img class="test-quote" src="./quote-mark-2.png" alt="">
 
-                                <p class="test-lorem">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                    Voluptatem quis
-                                    quam
-                                    voluptate ipsa corrupti libero eaque obcaecati asperiores
-                                    voluptates!</p>
+                                <p class="test-lorem">My experience with BestBridge has been amazing. "Through their
+                                    training I have acquired new skills that have helped me to function effectively in my
+                                    role as a school principal. I am now able to undertake the effective instructional
+                                    supervision. This has improved learning outcome"</p>
 
                                 <div class="client-name_test">
 
-                                    <h3 class="test-name">Siddiq</h3>
-                                    <small class="test-name_ocp">- Student -</small>
+                                    <h3 class="test-name">Albert</h3>
+                                    <small class="test-name_ocp">- School Principal -</small>
 
                                 </div>
                             </div>
